tests/NormalTests/paczka2/big_fuzzy/45493171.err
Error in line 10: B7eifeOeJgs A24A 6,1
Error in line 17: 5NJvVTMd0V A249 75,1
Error in line 19: 5NJvVTMd0V A802 -2,8
Error in line 22: B7eifeOeJgs S885 65,85
Error in line 12: B7eifeOeJgs S885 73,3
Error in line 26: 8LqoZy A802 32,6
Error in line 29: 8LqoZy A249 83,9
Error in line 24: B7eifeOeJgs A802 3,7
Error in line 18: 5NJvVTMd0V A802 39,1
Error in line 43: B7eifeOeJgs A249 27,1
Error in line 49: B7eifeOeJgs S885 34,9
Error in line 69: hMbo96Uuz A489 16,3
Error in line 65: 5NJvVTMd0V S885 38,8
Error in line 80: 5NJvVTMd0V A489 0,5
Error in line 82: 5NJvVTMd0V A249 63,4
Error in line 88: 5NJvVTMd0V S885 53,0
Error in line 87: A249 A249 82,4
Error in line 86: PbGFUYnQFbV S885 56,8
Error in line 110: A249 A802 18,1
Error in line 117: kgdE S885 60,6
Error in line 112: PbGFUYnQFbV S885 74,9
Error in line 99: 8LqoZy A802 52,5
Error in line 115: A249 S885 39,1
Error in line 125: A249 A489 74,3
Error in line 134: PbGFUYnQFbV S885 89,2
Error in line 147: PbGFUYnQFbV A249 74,8
Error in line 153: 5NJvVTMd0V A802 38,9
Error in line 165: PbGFUYnQFbV A802 87,4
Error in line 142: kgdE A489 54,1
Error in line 170: 5NJvVTMd0V A802 23,8
Error in line 177: A249 A249 273,8
Error in line 190: 5NJvVTMd0V S885 26,6
Error in line 195: B7eifeOeJgs A489 7,3
Error in line 197: B7eifeOeJgs S885 30,2
Error in line 207: 8LqoZy A489 97,1
Error in line 216: kgdE A249 2,4
Error in line 217: 8LqoZy A802 3,7
Error in line 226: B7eifeOeJgs A802 10,2
Error in line 232: hMbo96Uuz A489 62,3
